# Task-manager

./: .env.template  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
task_manager/: json_data_reader.py  mixins.py  settings.py  test.py  urls.py  views.py
task_manager/apps/labels/: apps.py  models.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py
task_manager/apps/labels/tests/: tests.py
task_manager/apps/status/: apps.py  models.py  urls.py  views.py
task_manager/apps/statuses/: apps.py  forms.py  urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/statuses/tests/: tests.py
task_manager/apps/tasks/: apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_tasklabelrelation_task_labels.py  (+2 more)
task_manager/apps/users/: apps.py  forms.py  tests.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_label.json  test_status.json  test_task.json  test_user.json  users.json
task_manager/templates/: base.html  footer.html  index.html  navbar.html  user_auth.html
task_manager/templates/authenticate/: user_auth.html
task_manager/templates/labels/: create.html  delete.html  main.html  update.html
task_manager/templates/statuses/: create.html  delete.html  main.html  update.html
task_manager/templates/tasks/: create.html  delete.html  main.html  task_detail.html  update.html
task_manager/templates/users/: create.html  delete.html  main.html  update.html
(+5 files in other folders)
