[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Study project on django - 'Task manager'"
authors = ["Dzigr <dmbrag@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.3"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
pip = "^23.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
